# ping-health-demo

./: .env.example  .gitignore  README.md  compose.prod.yml  compose.yml  request.http
go-app/: Dockerfile.prod  go.mod
go-app/src/: server.go
migrations/: Dockerfile  package.json
migrations/prisma/: schema.prisma
migrations/prisma/migrations/20250904135404_create_pings_table/: migration.sql
node-app/: Dockerfile  Dockerfile.prod  package.json
node-app/src/: server.ts
rust-app/: Cargo.toml  Dockerfile  Dockerfile.prod
rust-app/src/: main.rs
rust-app/src/handlers/: health.rs  mod.rs  ping.rs
rust-app/src/models/: ping.rs
