[package]
name = "rust-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
sea-orm = { version = "1.1.15", features = ["sqlx-postgres", "runtime-tokio", "macros", "with-chrono"] }
serde = "1.0.219"
serde_json = "1.0.143"
tokio =  { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v7"] }
